--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,9 @@ spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
-#spring.datasource.url=${DB_URL}
-spring.datasource.url=jdbc:postgresql://localhost:5432/bank_details
-spring.datasource.username=bank_user
-spring.datasource.password=admin
-#spring.datasource.username=${DB_USER_NAME}
-#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USER_NAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
